infrastructure/terraform/module-ecs-services/security-groups.tf
resource "aws_security_group" "internal-service-sg" {
  description = "Security group for internal service albs"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = flatten([split(",", var.internal_cidrs), split(",", var.application_cidrs)])
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = flatten([split(",", var.internal_cidrs), split(",", var.application_cidrs)])
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Environment = "${var.environment}"
    Name        = "${var.name_prefix}-internal-service-sg"
  }
}
